--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
     "react": "17.0.2",
     "react-native": "0.68.2"
   },
