--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@hookstate/core": "^4.0.0-rc5",
     "@react-native-material/core": "^1.3.7",
+    "dataclass": "^2.0.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-vector-icons": "^9.1.0"
