--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@hookstate/core": "^4.0.0-rc5",
     "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "dataclass": "^2.0.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0"
   },
