--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dataclass": "^2.0.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-btr": "^2.1.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-toast-message": "^2.1.5",
