--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "dataclass": "^2.0.0",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.69.0",
     "react-native-btr": "^2.1.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "^0.18.1"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
@@ -30,8 +32,7 @@
     "babel-jest": "26.6.3",
     "eslint": "7.32.0",
     "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.67.0",
-    "react-test-renderer": "17.0.2"
+    "metro-react-native-babel-preset": "0.67.0"
   },
   "jest": {
     "preset": "react-native"
