--- a/package.json
+++ b/package.json
@@ -15,24 +15,32 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "dataclass": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "^0.69.0",
     "react-native-btr": "^2.1.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "^0.18.1"
+    "react-native-web": "^0.18.1",
+    "expo": "^45.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
     "@babel/runtime": "7.18.3",
     "@react-native-community/eslint-config": "2.0.0",
     "babel-jest": "26.6.3",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-react-native-web": "^0.18.1",
     "eslint": "7.32.0",
     "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.67.0"
+    "metro-react-native-babel-preset": "0.67.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "jest": {
     "preset": "react-native"
