--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "electroshopreact",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://localhost:8081",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,16 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "dataclass": "^2.0.0",
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-btr": "^2.1.4",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
