--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "react": "17.0.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "17.0.2",
@@ -25,7 +26,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7",
-    "expo-updates": "~0.13.3"
+    "react-resize-detector": "^7.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
