--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
     "react": "17.0.2",
-    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-btr": "^2.1.4",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
-    "react-resize-detector": "^7.1.2"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
